src/objects/booking__BBMember__c.object
<CustomObject>
    <fields>
        <fullName>booking__Address1__c</fullName>
        <label>Address1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>booking__Address2__c</fullName>
        <label>Address2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>booking__Address3__c</fullName>
        <label>Address3</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>booking__BookingBug_Id__c</fullName>
        <externalId>true</externalId>
        <label>BookingBug ID</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>booking__Comp_Ref__c</fullName>
        <label>Comp Ref</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>booking__Company_ID__c</fullName>
        <label>Company ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>booking__Country__c</fullName>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>booking__Default_Company_ID__c</fullName>
        <label>Default Company ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>booking__Deleted__c</fullName>
        <label>Deleted</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>booking__Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>booking__External_References__c</fullName>
        <label>External References</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>booking__Extra_Info__c</fullName>
        <label>Extra Info</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>booking__First_Name__c</fullName>
        <label>First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>booking__Global_ID__c</fullName>
        <label>Global ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>booking__Image_ID__c</fullName>
        <label>Image ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>booking__Last_Name__c</fullName>
        <label>Last Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>booking__Lat_Long__c</fullName>
        <label>Lat Long</label>
        <scale>5</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>booking__LinkedIn_UID__c</fullName>
        <label>LinkedIn UID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>booking__Login_ID__c</fullName>
        <label>Login ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>booking__Mem_Join_Date__c</fullName>
        <label>Mem Join Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>booking__Member_Level_ID__c</fullName>
        <label>Member Level ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>booking__Member_Type__c</fullName>
        <label>Member Type</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>booking__Membership_Expiry_Old__c</fullName>
        <label>Membership Expiry Old</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>booking__Merge_ID__c</fullName>
        <label>Merge ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>booking__Mobile_phone__c</fullName>
        <label>Mobile phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>booking__Nick__c</fullName>
        <label>Nick</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>booking__Od_Twitter_UID__c</fullName>
        <label>Od Twitter UID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>booking__Old_Facebook_UID__c</fullName>
        <label>Old Facebook UID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>booking__Old_MySpace_UID__c</fullName>
        <label>Old MySpace UID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>booking__Old_Password_Salt__c</fullName>
        <label>Old Password Salt</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>booking__Old_Password__c</fullName>
        <label>Old Password</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>booking__Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>booking__Postcode__c</fullName>
        <label>Postcode</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>booking__Questions__c</fullName>
        <label>Questions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>booking__Registered__c</fullName>
        <label>Registered</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>booking__SF_reference__c</fullName>
        <label>SF reference</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>booking__Site__c</fullName>
        <label>Site</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>booking__Space_Detail_Map_ID__c</fullName>
        <label>Space Detail Map ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>booking__Status__c</fullName>
        <label>Status</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>booking__Time_Zone__c</fullName>
        <label>Time Zone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>BBMember</label>
    <listViews>
        <fullName>booking__All</fullName>
        <columns>booking__First_Name__c</columns>
        <columns>booking__Last_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>booking__By_Name</fullName>
        <columns>NAME</columns>
        <columns>booking__First_Name__c</columns>
        <columns>booking__Last_Name__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>booking__BookingBug_Id__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>By Name</label>
    </listViews>
    <nameField>
        <label>BBMember</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BBMembers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>